2007-11-12  Dan Fandrich <dan@coneharvesters.com>
	* Added support for more Olympus makernotes, based on data on
	  Phil Harvey's ExifTool page at
	  http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/
	  and sanity checked by the pel-images in the libexif test suite.
	* Added support for Sanyo makernotes, which have the identical
	  tag format and (so it seems) namespace of the Olympus tags.

2007-11-08  Dan Fandrich <dan@coneharvesters.com>
	* Added Canadian English translation, eh?

2007-11-06  Dan Fandrich <dan@coneharvesters.com>
	* Renamed EXIF_TAG_UNKNOWN_C4A5 to EXIF_TAG_PRINT_IMAGE_MATCHING
	  The PIM entry seems to have a format consisting of an 8 byte
	  magic number, 6 byte version number, 2 byte record count field,
	  then a series of 6 byte records consisting of a 2 byte tag field
	  and an 4 byte data field.

2007-10-29  Dan Fandrich <dan@coneharvesters.com>
	* Fixed some typos in messages
	* Made some structs const
	* Support compiling away the detailed tag tables and log messages when
	  the NO_VERBOSE_TAG_STRINGS macro is defined to reduce the size of
	  the library for use in embedded applications where space is at
	  a premium
	* Display the raw value of a tag when the tag is unknown

2007-09-12  Jan Patera <patera@users.sourceforge.net>

	* Enhancements to Canon makernote parsers submitted by Thorsten Kukuk
	* Added Dutch and Swedish translations, updated Slovak translation

2007-08-16  Jan Patera <patera@users.sourceforge.net>

	* exif-mnote-data-olympus.c: Fix of bugs #1773810, #1774626, gnome bug #466044:
	  Some Olympus files have main IFD in MM byte order as well as makernote, but
	  makernote order was guessed wrongly. Bug introduced when fixing bug #1525770.

2007-06-25  Jan Patera <patera@users.sourceforge.net>

	* Endianess of Nikon V1 makernotes is now guessed, it might not
	  be the same as of the main IFD

2007-05-21  Jan Patera <patera@users.sourceforge.net>

	* First version of Czech localization (cs.po)